# keynav-the-game

./: .gitignore  README.md  keynav-game.spec  pyproject.toml  requirements.txt  test.py
src/keynav-game/: game_logic.py  main.py  my_kivies.py  test.py
src/keynav_game/: __main__.py  game_logic.py  main.py  my_kivies.py  ui.py
